--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cat-and-dog-breeds",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://dev.wagmo.io",
   "dependencies": {
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
