--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "@types/react-select": "^4.0.17",
     "@types/styled-components": "^5.1.12",
     "cra-template-typescript": "1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^2.1.0"
